--- a/public/app/sass/pages/_article.sass
+++ b/public/app/sass/pages/_article.sass
@@ -44,7 +44,7 @@
 
     .image-wrap
       +rem(margin, 1rem 0)
-      display: block
+      display: inline-block
       width: auto
 
     // Special blocks ---------------------------------------------- /
